--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
 :root {
     --color-primary-dark: #31261a;
     --color-primary-light:#FAF4EA;
@@ -8,15 +9,38 @@
 /* Base */
 body {
     color: var(--color-primary-dark);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+h1,h2,h3,h4,h5,h6, p {
+    margin-top: 0;
+}
+address{
+   font-style: normal; 
 }
 ul {
     list-style-type: none;
 }
+.hidden {
+position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;
+}
 
+.section {
+padding: 48px 0;
+}
 
 /* Button */
 .button {
     color: var(--color-primary-light);
+    font-weight: 600  ;
     background-color:  var(--color-brand)
     border: 2px solid var(var(--color-brand))
     border-radius: 8px;
@@ -30,13 +54,25 @@ ul {
 /* Link */
 .link{
   color: var(--color-primary-light);
+  line-height: 1.5;
+  text-decoration: none;
 }
 .link:hover {    
-color: var(--color-brand)
+color: var(--color-brand);
+font-weight: 600;
+}
+
+/*Hero section */
+.hero-section {
+    padding: 272px, 0;
 }
 /* h1 */
 .hero-title {
+    margin-bottom: 0 ;
     color: var(--color-primary-light);
+    text-align: center;
+    font-size: 128px;
+    font-weight: 900;
 }
 
 .hero-title .accent {
@@ -46,6 +82,73 @@ color: var(--color-brand)
         color: var(--color-primary-light);
         background-color: var(--color-brand);
     }
+
+    .section-title{
+        font-size: 64px;
+        font-weight: 900;
+        line-height: 1.3;
+    }
     .section-title .accent{
         color: var(--color-brand-dark);
+    }
+ /* advantages-item */ 
+ .advantages-item {
+    font-size: 20px;
+    font-weight: 300;
+ }
+    /*Traditions section */
+    .traditions-section {
+padding-top: 96px;
+    }
+    .traditions-title {
+        margin-bottom: 42px;
+    }
+    .traditions-text .brand{
+        color: var(--color-brand);
+        font-weight: 600;
+    }
+    .traditions-text .brand_uppercase{
+        text-transform: uppercase;
+        color: var(--color-brand);
+    }
+
+    /*Chef section */
+    .chefs-title {
+        font-size: 40px;
+        font-weight: 600;
+        margin-bottom: 16px;
+    }
+.chefs-title section {
+    margin-bottom: 80px;
+}
+    /*Format section */ 
+    .format-title {
+        font-size: 24px;
+        font-weight: 600;
+    }
+    .format-text {
+        font-size: 14px;
+        font-weight: 300;
+    }
+    .format-title section {
+        margin-bottom: 80px;
+    }
+/*Contact */
+.contact-title {
+    margin-bottom: 16px;
+}
+    /*Footer*/
+    .adress-link {
+        color: var(--color-primary-light);
+        font-size: 16px;
+        font-weight: 300;
+        text-decoration: none;
+    }
+    .adress-link:hover {
+        color: var(--color-brand);
+        font-size: 16px;
+        font-weight: 300;
+    }
+    .adress-copyright{
+        font-size: 14px;
     }
